crates/ynz-codegen/tests/snapshots/golden__m4_player_ir.snap
---
source: crates/ynz-codegen/tests/golden.rs
expression: artifact.ir_text
---
; ModuleID = 'ynz-m4_player.ynz'
source_filename = "ynz-m4_player.ynz"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-i128:128-f80:128-n8:16:32:64-S128"
target triple = "x86_64-pc-linux-gnu"

@.str.true = private unnamed_addr constant [5 x i8] c"true\00"
@.str.false = private unnamed_addr constant [6 x i8] c"false\00"
@.dec.zero = private unnamed_addr constant i128 45235290231555418299757684020165476352
@.panic.iadd = private unnamed_addr constant [20 x i8] c"int overflow in '+'\00"
@.panic.isub = private unnamed_addr constant [20 x i8] c"int overflow in '-'\00"
@.panic.imul = private unnamed_addr constant [20 x i8] c"int overflow in '*'\00"
@.panic.idiv = private unnamed_addr constant [23 x i8] c"division by zero (int)\00"
@.panic.irem = private unnamed_addr constant [24 x i8] c"remainder by zero (int)\00"
@.panic.ddiv = private unnamed_addr constant [26 x i8] c"division by zero (number)\00"
@.panic.drem = private unnamed_addr constant [27 x i8] c"remainder by zero (number)\00"
@str = private unnamed_addr constant [8 x i8] c"Patrick\00"

declare i32 @puts(ptr)

declare void @ynz_decimal_add(ptr, ptr, ptr)

declare void @ynz_decimal_sub(ptr, ptr, ptr)

declare void @ynz_decimal_mul(ptr, ptr, ptr)

declare void @ynz_decimal_div(ptr, ptr, ptr)

declare i32 @ynz_decimal_compare(ptr, ptr)

declare void @ynz_decimal_from_int(i64, ptr)

declare void @ynz_decimal_from_float(double, ptr)

declare ptr @ynz_decimal_to_string(ptr)

declare ptr @ynz_int_to_string(i64)

declare ptr @ynz_float_to_string(double)

declare void @ynz_panic_overflow(ptr)

declare void @ynz_panic_div_by_zero(ptr)

; Function Attrs: nocallback nofree nosync nounwind speculatable willreturn memory(none)
declare { i64, i1 } @llvm.sadd.with.overflow.i64(i64, i64) #0

; Function Attrs: nocallback nofree nosync nounwind speculatable willreturn memory(none)
declare { i64, i1 } @llvm.ssub.with.overflow.i64(i64, i64) #0

; Function Attrs: nocallback nofree nosync nounwind speculatable willreturn memory(none)
declare { i64, i1 } @llvm.smul.with.overflow.i64(i64, i64) #0

declare i32 @ynz_string_eq(ptr, ptr)

declare ptr @ynz_alloc(i64)

declare void @ynz_free(ptr, i64)

declare ptr @ynz_array_new()

declare void @ynz_array_push(ptr, i64)

declare void @ynz_array_get(ptr, i64, ptr)

declare void @ynz_array_set(ptr, i64, i64)

declare i64 @ynz_array_count(ptr)

declare void @ynz_array_drop(ptr)

declare void @ynz_siphash_init()

declare ptr @ynz_map_new()

declare void @ynz_map_get(ptr, i64, ptr)

declare void @ynz_map_get_str(ptr, ptr, ptr)

declare void @ynz_map_set(ptr, i64, i64)

declare void @ynz_map_set_str(ptr, ptr, i64)

declare i64 @ynz_map_count(ptr)

declare i64 @ynz_map_has(ptr, i64)

declare void @ynz_map_iter_get(ptr, i64, ptr)

declare void @ynz_map_iter_get_str(ptr, i64, ptr)

declare void @ynz_map_drop(ptr)

declare void @ynz_string_to_int(ptr, i64, ptr)

declare void @ynz_string_to_float(ptr, i64, ptr)

declare void @ynz_string_to_number(ptr, i64, ptr)

declare ptr @ynz_string_from_static(ptr, i64)

define void @greet(ptr noalias readonly %0) {
entry:
  %self = alloca ptr, align 8
  store ptr %0, ptr %self, align 8
  %self1 = load ptr, ptr %self, align 8
  %name = getelementptr inbounds { ptr, i64 }, ptr %self1, i32 0, i32 0
  %name2 = load ptr, ptr %name, align 8
  %puts = call i32 @puts(ptr %name2)
  ret void
}

define void @heal(ptr noalias %0, i64 %1) {
entry:
  %self = alloca ptr, align 8
  store ptr %0, ptr %self, align 8
  %amount = alloca i64, align 8
  store i64 %1, ptr %amount, align 8
  %self1 = load ptr, ptr %self, align 8
  %health = getelementptr inbounds { ptr, i64 }, ptr %self1, i32 0, i32 1
  %self2 = load ptr, ptr %self, align 8
  %health3 = getelementptr inbounds { ptr, i64 }, ptr %self2, i32 0, i32 1
  %health4 = load i64, ptr %health3, align 8
  %amount5 = load i64, ptr %amount, align 8
  %ov_res = call { i64, i1 } @llvm.sadd.with.overflow.i64(i64 %health4, i64 %amount5)
  %sum = extractvalue { i64, i1 } %ov_res, 0
  %ov = extractvalue { i64, i1 } %ov_res, 1
  br i1 %ov, label %ov_panic, label %ov_ok

ov_ok:                                            ; preds = %entry
  store i64 %sum, ptr %health, align 8
  ret void

ov_panic:                                         ; preds = %entry
  call void @ynz_panic_overflow(ptr @.panic.iadd)
  unreachable
}

define void @consume(ptr %0) {
entry:
  %p = alloca ptr, align 8
  store ptr %0, ptr %p, align 8
  %p1 = load ptr, ptr %p, align 8
  %name = getelementptr inbounds { ptr, i64 }, ptr %p1, i32 0, i32 0
  %name2 = load ptr, ptr %name, align 8
  %puts = call i32 @puts(ptr %name2)
  ret void
}

define i32 @main() {
entry:
  call void @ynz_siphash_init()
  %Player = alloca { ptr, i64 }, align 8
  store { ptr, i64 } zeroinitializer, ptr %Player, align 8
  %name = getelementptr inbounds { ptr, i64 }, ptr %Player, i32 0, i32 0
  store ptr @str, ptr %name, align 8
  %health = getelementptr inbounds { ptr, i64 }, ptr %Player, i32 0, i32 1
  store i64 100, ptr %health, align 8
  %p = alloca ptr, align 8
  store ptr %Player, ptr %p, align 8
  %p1 = load ptr, ptr %p, align 8
  call void @greet(ptr %p1)
  %p2 = load ptr, ptr %p, align 8
  call void @heal(ptr %p2, i64 20)
  %p3 = load ptr, ptr %p, align 8
  %health4 = getelementptr inbounds { ptr, i64 }, ptr %p3, i32 0, i32 1
  %health5 = load i64, ptr %health4, align 8
  %int_str = call ptr @ynz_int_to_string(i64 %health5)
  %puts = call i32 @puts(ptr %int_str)
  %p6 = load ptr, ptr %p, align 8
  call void @consume(ptr %p6)
  ret i32 0
}

attributes #0 = { nocallback nofree nosync nounwind speculatable willreturn memory(none) }
