crates/ynz-codegen/tests/snapshots/golden__v03_m1_background_ir.snap
---
source: crates/ynz-codegen/tests/golden.rs
expression: output.artifact.ir_text
---
; ModuleID = 'ynz-v03m1bg.ynz'
source_filename = "ynz-v03m1bg.ynz"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-i128:128-f80:128-n8:16:32:64-S128"
target triple = "x86_64-pc-linux-gnu"

@bts = private unnamed_addr constant [5 x i8] c"done\00"

; Function Attrs: nofree nounwind
declare noundef i32 @puts(ptr nocapture noundef readonly) local_unnamed_addr #0

declare void @ynz_siphash_init() local_unnamed_addr

declare void @ynz_rt_init() local_unnamed_addr

declare void @ynz_rt_spawn_blocking(ptr, ptr, i64) local_unnamed_addr

declare void @ynz_rt_shutdown() local_unnamed_addr

declare void @ynz_thread_sleep_ms(i64) local_unnamed_addr

define void @worker() local_unnamed_addr {
entry:
  tail call void @ynz_thread_sleep_ms(i64 1)
  ret void
}

define noundef i32 @main() local_unnamed_addr {
entry:
  tail call void @ynz_siphash_init()
  tail call void @ynz_rt_init()
  tail call void @ynz_rt_spawn_blocking(ptr nonnull @ynz_bg_worker_0, ptr null, i64 0)
  %puts = tail call i32 @puts(ptr nonnull dereferenceable(1) @bts)
  tail call void @ynz_rt_shutdown()
  ret i32 0
}

define void @ynz_bg_worker_0(ptr nocapture readnone %0) {
entry:
  tail call void @ynz_thread_sleep_ms(i64 1)
  ret void
}

attributes #0 = { nofree nounwind }
