crates/ynz-codegen/tests/snapshots/golden__v03_m1_while_preempt_ir.snap
---
source: crates/ynz-codegen/tests/golden.rs
expression: ir
---
; ModuleID = 'ynz-v03m1while.ynz'
source_filename = "ynz-v03m1while.ynz"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-i128:128-f80:128-n8:16:32:64-S128"
target triple = "x86_64-pc-linux-gnu"

; Function Attrs: nofree nounwind
declare noundef i32 @puts(ptr nocapture noundef readonly) local_unnamed_addr #0

declare ptr @ynz_int_to_string(i64) local_unnamed_addr

declare void @ynz_siphash_init() local_unnamed_addr

declare void @ynz_rt_init() local_unnamed_addr

declare i8 @ynz_rt_check_preempt(ptr) local_unnamed_addr

declare void @ynz_rt_shutdown() local_unnamed_addr

define noundef i32 @main() local_unnamed_addr {
entry:
  tail call void @ynz_siphash_init()
  tail call void @ynz_rt_init()
  %loop_sp = tail call ptr @llvm.stacksave.p0()
  %preempt = tail call i8 @ynz_rt_check_preempt(ptr null)
  tail call void @llvm.stackrestore.p0(ptr %loop_sp)
  %preempt.1 = tail call i8 @ynz_rt_check_preempt(ptr null)
  tail call void @llvm.stackrestore.p0(ptr %loop_sp)
  %preempt.2 = tail call i8 @ynz_rt_check_preempt(ptr null)
  tail call void @llvm.stackrestore.p0(ptr %loop_sp)
  %int_str = tail call ptr @ynz_int_to_string(i64 0)
  %puts = tail call i32 @puts(ptr nonnull dereferenceable(1) %int_str)
  tail call void @ynz_rt_shutdown()
  ret i32 0
}

; Function Attrs: mustprogress nocallback nofree nosync nounwind willreturn
declare ptr @llvm.stacksave.p0() #1

; Function Attrs: mustprogress nocallback nofree nosync nounwind willreturn
declare void @llvm.stackrestore.p0(ptr) #1

attributes #0 = { nofree nounwind }
attributes #1 = { mustprogress nocallback nofree nosync nounwind willreturn }
