crates/ynz-codegen/tests/snapshots/golden__v03_m2_background_spawn_regular_fn_ir.snap
---
source: crates/ynz-codegen/tests/golden.rs
expression: ir
---
; ModuleID = 'ynz-v03m2_bg_regular.ynz'
source_filename = "ynz-v03m2_bg_regular.ynz"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-i128:128-f80:128-n8:16:32:64-S128"
target triple = "x86_64-pc-linux-gnu"

@.str.true = private unnamed_addr constant [5 x i8] c"true\00"
@.str.false = private unnamed_addr constant [6 x i8] c"false\00"
@.dec.zero = private unnamed_addr constant i128 45235290231555418299757684020165476352
@.panic.iadd = private unnamed_addr constant [20 x i8] c"int overflow in '+'\00"
@.panic.isub = private unnamed_addr constant [20 x i8] c"int overflow in '-'\00"
@.panic.imul = private unnamed_addr constant [20 x i8] c"int overflow in '*'\00"
@.panic.idiv = private unnamed_addr constant [23 x i8] c"division by zero (int)\00"
@.panic.irem = private unnamed_addr constant [24 x i8] c"remainder by zero (int)\00"
@.panic.ddiv = private unnamed_addr constant [26 x i8] c"division by zero (number)\00"
@.panic.drem = private unnamed_addr constant [27 x i8] c"remainder by zero (number)\00"
@.source.file = private unnamed_addr constant [21 x i8] c"v03m2_bg_regular.ynz\00"

declare i32 @puts(ptr)

declare void @ynz_decimal_add(ptr, ptr, ptr)

declare void @ynz_decimal_sub(ptr, ptr, ptr)

declare void @ynz_decimal_mul(ptr, ptr, ptr)

declare void @ynz_decimal_div(ptr, ptr, ptr)

declare i32 @ynz_decimal_compare(ptr, ptr)

declare void @ynz_decimal_from_int(i64, ptr)

declare void @ynz_decimal_from_float(double, ptr)

declare ptr @ynz_decimal_to_string(ptr)

declare ptr @ynz_int_to_string(i64)

declare ptr @ynz_float_to_string(double)

declare void @ynz_panic_overflow(ptr, ptr, i32, i32)

declare void @ynz_panic_div_by_zero(ptr, ptr, i32, i32)

; Function Attrs: nocallback nofree nosync nounwind speculatable willreturn memory(none)
declare { i64, i1 } @llvm.sadd.with.overflow.i64(i64, i64) #0

; Function Attrs: nocallback nofree nosync nounwind speculatable willreturn memory(none)
declare { i64, i1 } @llvm.ssub.with.overflow.i64(i64, i64) #0

; Function Attrs: nocallback nofree nosync nounwind speculatable willreturn memory(none)
declare { i64, i1 } @llvm.smul.with.overflow.i64(i64, i64) #0

declare i32 @ynz_string_eq(ptr, ptr)

declare ptr @ynz_alloc(i64)

declare void @ynz_free(ptr, i64)

declare ptr @ynz_array_new()

declare void @ynz_array_push(ptr, i64)

declare void @ynz_array_get(ptr, i64, ptr)

declare void @ynz_array_set(ptr, i64, i64)

declare i64 @ynz_array_count(ptr)

declare void @ynz_array_drop(ptr)

declare void @ynz_siphash_init()

declare ptr @ynz_map_new()

declare void @ynz_map_get(ptr, i64, ptr)

declare void @ynz_map_get_str(ptr, ptr, ptr)

declare void @ynz_map_set(ptr, i64, i64)

declare void @ynz_map_set_str(ptr, ptr, i64)

declare i64 @ynz_map_count(ptr)

declare i64 @ynz_map_has(ptr, i64)

declare void @ynz_map_iter_get(ptr, i64, ptr)

declare void @ynz_map_iter_get_str(ptr, i64, ptr)

declare void @ynz_map_drop(ptr)

declare void @ynz_string_to_int(ptr, i64, ptr)

declare void @ynz_string_to_float(ptr, i64, ptr)

declare void @ynz_string_to_number(ptr, i64, ptr)

declare ptr @ynz_string_from_static(ptr, i64)

declare void @ynz_frame_push(ptr, i64, ptr)

declare void @ynz_frame_pop()

declare ptr @ynz_error_new(ptr)

declare void @ynz_error_drop(ptr)

declare ptr @ynz_error_message(ptr)

declare void @ynz_unhandled_error(ptr)

declare i32 @ynz_string_validate_utf8(ptr, i64)

declare ptr @ynz_string_concat(ptr, ptr)

declare i64 @ynz_string_count(ptr)

declare i64 @ynz_string_byte_count(ptr)

declare ptr @ynz_string_codepoint_at(ptr, i64)

declare i64 @ynz_string_byte_at(ptr, i64)

declare i32 @ynz_string_contains(ptr, ptr)

declare i64 @ynz_string_index_of(ptr, ptr)

declare i32 @ynz_string_starts_with(ptr, ptr)

declare i32 @ynz_string_ends_with(ptr, ptr)

declare ptr @ynz_string_to_upper(ptr)

declare ptr @ynz_string_to_lower(ptr)

declare ptr @ynz_string_substring(ptr, i64, i64)

declare ptr @ynz_string_trim(ptr)

declare i64 @ynz_string_grapheme_count(ptr)

declare ptr @ynz_string_grapheme_at(ptr, i64)

declare ptr @ynz_string_split(ptr, ptr)

declare ptr @ynz_string_replace(ptr, ptr, ptr)

declare ptr @ynz_string_builder_new()

declare void @ynz_string_builder_append(ptr, ptr)

declare ptr @ynz_string_builder_finalize(ptr)

declare void @ynz_string_builder_drop(ptr)

declare ptr @ynz_sensitive_to_string(ptr)

declare ptr @ynz_bignum_add(ptr, ptr, i32)

declare ptr @ynz_bignum_sub(ptr, ptr, i32)

declare ptr @ynz_bignum_mul(ptr, ptr, i32)

declare ptr @ynz_bignum_div(ptr, ptr, i32)

declare void @ynz_rt_init()

declare void @ynz_rt_spawn_blocking(ptr, ptr, i64)

declare void @ynz_rt_check_preempt()

declare void @ynz_rt_shutdown()

declare void @ynz_thread_sleep_ms(i64)

declare void @ynz_rt_spawn(ptr, ptr, i64)

declare ptr @ynz_rt_async_sleep_create(i64)

declare i32 @ynz_rt_async_sleep_poll(ptr, ptr)

declare i32 @ynz_rt_call_state_machine_sync(ptr, ptr, i64)

define void @worker() {
entry:
  call void @ynz_thread_sleep_ms(i64 100)
  ret void
}

define i32 @main() {
entry:
  call void @ynz_siphash_init()
  call void @ynz_rt_init()
  call void @ynz_rt_spawn_blocking(ptr @ynz_bg_worker_0, ptr null, i64 0)
  call void @ynz_thread_sleep_ms(i64 200)
  call void @ynz_rt_shutdown()
  ret i32 0
}

define void @ynz_bg_worker_0(ptr %0) {
entry:
  call void @worker()
  ret void
}

attributes #0 = { nocallback nofree nosync nounwind speculatable willreturn memory(none) }
